@@ -1,3 +1,11 @@
+2012-04-03  Adam Barth  <abarth@webkit.org>
+
+        Unreviewed. This patch adds an ugly, ugly hack to bandaid over the
+        Windows component build. See comments in the code for details.
+
+        * chromium/public/WebMediaStreamSourcesRequest.h:
+        (WebMediaStreamSourcesRequest):
+
 2012-04-02  Zhenyao Mo  <zmo@google.com>
 
         Implement WebGLShaderPrecisionFormat
